Update CommandManager lib 2